--- a/2022-09-20-Convegno_USB.qmd
+++ b/2022-09-20-Convegno_USB.qmd
@@ -77,3 +77,20 @@ spazio europeo della ricerca;
     - Molti istituti sono in più regioni
     - E se i diversi provveditorati generassero dei conflitti interpretativi e delle difformità amministrative?
     - Es. IAC Roma (Lazio-Toscana) vs IAC Bari (Puglia-Basilicata)
+
+
+
+# Questione di Generi e Sostenibilità {data-background="img/decreto_inclusione_41.jpg" data-background-size="contain" data-background-repeat="no-repeat"} 
+
+## A che punto siamo? {.smaller}   
+
+- Gli unici numeri visibili [CNR IN NUMERI](https://www.cnr.it/it/cnr-in-numeri) (53.5% Uomini e 46.5% Donne) non descrivono i dettagli né la sensazione diffusa
+
+- Nulla sui i vari livelli e le direzioni di istituto? 
+
+- Inoltre l'unica statistica non è in linea con i [Sustainable Development Goals](https://www.undp.org/sustainable-development-goals) dell'ONU cui formalmente il CNR [aderisce](https://www.outreach.cnr.it/risorsa/153/sviluppo-sostenibile-apriamo-lagenda-2030-dellonu) che nel goal 16 recitano : *... accountable and inclusive institutiuons at all levels*
+
+- In realtà non è reperibile un documento che attesti l'azione interna del CNR in merito a questi punti
+
+- E' il personale che stimola l'ente : progetto europeo [MindTheGeps](https://www.irpps.cnr.it/mind-the-geps/) cui partecipa IRPPS. Gen-Feb 2022: *Questionario verso un piano di genere: comportamenti ed opinioni del personale CNR*
+        
