preview link true

--- a/2022-09-20-Convegno_USB.qmd
+++ b/2022-09-20-Convegno_USB.qmd
@@ -14,7 +14,8 @@ format:
         progress: true
         slide-number: c/t 
         footer: Convegno USB Criticità Enti Pubblici  
-        lang: it     
+        lang: it   
+        preview-links: true  
 title-slide-attributes:
     data-background-image:  img/scudo_16.png
     data-background-size: cover
