index.html for github.io

--- a/2022-09-20-Convegno_USB.qmd
+++ b/2022-09-20-Convegno_USB.qmd
@@ -89,7 +89,7 @@ spazio europeo della ricerca;
 
 - Nulla sui i vari livelli e le direzioni di istituto? 
 
-- Inoltre l'unica statistica non è in linea con i [Sustainable Development Goals](https://www.undp.org/sustainable-development-goals) dell'ONU cui formalmente il CNR [aderisce](https://www.outreach.cnr.it/risorsa/153/sviluppo-sostenibile-apriamo-lagenda-2030-dellonu) che nel goal 16 recitano : *... accountable and inclusive institutiuons at all levels*
+- Inoltre l'unica statistica non è in linea con i [Sustainable Development Goals](https://www.undp.org/sustainable-development-goals) dell'ONU, cui formalmente il CNR [aderisce](https://www.outreach.cnr.it/risorsa/153/sviluppo-sostenibile-apriamo-lagenda-2030-dellonu), che nel goal 16 recitano : *... accountable and inclusive institutions at all levels*
 
 - In realtà non è reperibile un documento che attesti l'azione interna del CNR in merito a questi punti
 
